# video-streamer

./: CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
client/include/client/: Client.hpp  ListenerClient.hpp  SpeakerClient.hpp
client/src/: main.cpp
common/: CMakeLists.txt
common/include/common/: Config.hpp  Connection.hpp  Error.hpp  Logger.hpp  NonBlocking.hpp  Packet.hpp  Poller.hpp  Socket.hpp  Types.hpp
common/src/: Connection.cpp
protocol/: CMakeLists.txt
protocol/includes/protocol/: Message.hpp  MessageType.hpp  Serializer.hpp
server/: CMakeLists.txt
server/include/server/: ClientRegistry.hpp  ClientSession.hpp  Server.hpp
server/src/: ClientRegistry.cpp  ClientSession.cpp  Server.cpp  main.cpp
tests/: CMakeLists.txt  TestClient.cpp  TestCommon.cpp  TestProtocol.cpp  TestServer.cpp
video/: CMakeLists.txt
video/include/video/: Capture.hpp  Decoder.hpp  Encoder.hpp  Frame.hpp
